--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,33 @@
-name: CI
+# CI workflow - currently disabled
+# Uncomment below to enable automatic flake checks on PRs and commits
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+# name: CI
 
-jobs:
-  check-flake:
-    runs-on: ubuntu-latest
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+# jobs:
+#   check-flake:
+#     runs-on: ubuntu-latest
+#
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
 
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: |
-            experimental-features = nix-command flakes
+#       - name: Install Nix
+#         uses: DeterminateSystems/nix-installer-action@main
+#         with:
+#           extra-conf: |
+#             experimental-features = nix-command flakes
+#
+#       - name: Setup Nix cache
+#         uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Setup Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
+#       - name: Check flake
+#         run: nix flake check -L
 
-      - name: Check flake
-        run: nix flake check -L
-
-      - name: Build NixOS configuration
-        run: nix build .#nixosConfigurations.kyun-cloud-init.config.system.build.toplevel -L
-
-  build-image:
-    runs-on: ubuntu-latest
-    needs: check-flake
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: |
-            experimental-features = nix-command flakes
-
-      - name: Setup Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - name: Build qcow2 image
-        run: nix build .#default -L
-
-      - name: Get image info
-        run: |
-          ls -lh result/
-          du -h result/nixos.qcow2
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: kyun-nixos-dev
-          path: result/nixos.qcow2
-          retention-days: 7
+#       - name: Verify NixOS configuration builds
+#         run: nix build .#nixosConfigurations.kyun-cloud-init.config.system.build.toplevel -L --no-link
