--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,21 @@ jobs:
               with:
                   extra_nix_config: |
                       experimental-features = nix-command flakes
-                      # Ensure reproducible builds
-                      sandbox = true
-                      max-jobs = auto
+                      # Force fresh build - no cache
+                      narinfo-cache-negative-ttl = 0
+                      trusted-public-keys =
+                      substituters = https://cache.nixos.org
+
+            - name: Clear any cached Nix store
+              run: |
+                  # Remove any potentially corrupted paths
+                  sudo rm -rf /nix/store/qj19bdpqxfbai07rcv7ibh492pcaczy8-getty || true
+                  nix-collect-garbage -d || true
 
             - name: Build and prepare image
               run: |
-                  # Clean build without any cached artifacts
-                  nix build .#default -L --option pure-eval true
+                  # Build from scratch
+                  nix build .#default -L --no-link --rebuild
 
                   # Copy image out of read-only Nix store and create checksum
                   mkdir -p dist
